# alglog

./: .gitignore  CMakeLists.txt  LICENSE  alglog.code-workspace  cmd_router.py  main.py  readme.md  test.cpp  utility.py
.github/workflows/: build.yml
include/: alglog-project-logger-template.h  alglog.h  mpsc_ring_buffer.h
test/: CMakeLists.txt  main.py  test.cpp  test_multi_include.cpp  test_multi_include.h  test_mylogger.h  utility.py
unity-test/: CMakeLists.txt  README.md
unity-test/Assets/Plugins/alglog/: AlgLogBridge.cs
unity-test/Assets/Tests/Editor/: AlgLogTests.cs
unity-test/src/: alglog_unity.cpp
